spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,7 @@ img {
 
 .social ul{
     padding-left: calc((100% - 18.7rem) / 2);
+    padding-top: 2rem;
 }
 
 .social a:hover {
